# wd-di

./: .gitignore  404.html  README.md  index.html  md.md  mkdocs.yml  objects.inv  pyproject.toml  repository_data.markdown  repository_data.txt
.devcontainer/: devcontainer.json
.github/actions/common-steps/: action.yml
.github/workflows/: deploy-documentation.yml  deploy-whiteduck-pypi.yml
advanced/: index.html
advanced-examples/: index.html
advanced-examples/multi-tenant-ingestion/: index.html
advanced/anti-patterns/: index.html
advanced/circular-deps/: index.html
advanced/decorators/: index.html
advanced/scaling/: index.html
api/: index.html
api/config/: index.html
api/container/: index.html
api/create_service_collection/: index.html
api/descriptors/: index.html
api/exceptions/: index.html
api/lifetimes/: index.html
api/middleware/: index.html
api/middleware_di/: index.html
api/service_collection/: index.html
core-concepts/: index.html
core-concepts/component-based-design/: index.html
core-concepts/configuration/: index.html
core-concepts/constructor-injection/: index.html
core-concepts/lifetimes/: index.html
core-concepts/separation-of-concerns/: index.html
docs/: design_tutorial.md  getting-started.md  index.md  roadmap.md  todo_until_feature_complete.md
docs/advanced/: anti-patterns.md  circular-deps.md  decorators.md  index.md  scaling.md
docs/advanced-examples/: index.md  multi-tenant-ingestion.md
docs/api/: config.md  container.md  create_service_collection.md  descriptors.md  exceptions.md  index.md  lifetimes.md  middleware.md  middleware_di.md  service_collection.md  service_provider.md
docs/core-concepts/: component-based-design.md  configuration.md  constructor-injection.md  index.md  lifetimes.md  separation-of-concerns.md
docs/middleware/: built-ins.md  index.md  overview.md
docs/order_processor/: design_tutorial.md  main.py
docs/order_processor/infrastructure/: config.py  logging_service.py
docs/tutorial/: 01-domain.md  02-services.md  03-wiring.md  index.md
examples/: decorator_type_hints_example.py  type_hints_example.py
examples/caching_with_decorators/: README.md  console_utils.py  decorators.py  main.py  services.py
examples/complex_ingest/: README.md  app.py
examples/complex_ingest/pipeline/: ingestor.py
examples/complex_ingest/storage/: abstractions.py  impl.py
examples/order_processor/: README.md  main.py
examples/order_processor/data/: repository.py
examples/order_processor/domain/: interfaces.py  models.py
examples/order_processor/presentation/: controller.py
examples/order_processor/services/: order_service.py
getting-started/: index.html
middleware/: index.html
middleware/built-ins/: index.html
middleware/overview/: index.html
roadmap/: index.html
search/: search_index.json
src/wd/di/: __init__.py  config.py  container.py  decorators.py  descriptors.py  exceptions.py  lifetimes.py  middleware.py  middleware_di.py  service_collection.py
src/wd_di/: __init__.py  container.py  lifetimes.py  middleware_di.py  service_collection.py
tests/: test_add_instance_roundtrip.py  test_circular_dependency.py  test_config.py  test_decorators.py  test_di.py  test_middleware.py  test_runtime_factory_with_contextvar.py  test_scope_singleton_interop.py  test_scoped.py  test_service_decorators.py
tutorial/: index.html
tutorial/01-domain/: index.html
tutorial/02-services/: index.html
tutorial/03-wiring/: index.html
