[project]
name = "wd-di"
version = "0.2.5"
description = ".NET Core Dependency Injection for Python"
readme = "README.md"
authors = [
    { name = "Andre Ratzenberger", email = "andre.ratzenberger@whiteduck.de" }
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/whiteducksoftware/wd-di"
"Documentation" = "https://whiteducksoftware.github.io/wd-di/"
"Repository" = "https://github.com/whiteducksoftware/wd-di"
"Bug Tracker" = "https://github.com/whiteducksoftware/wd-di/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wd"]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "loguru>=0.7.3",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.15.0",
    "poethepoet>=0.32.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
